--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "formik": "^2.2.6",
     "jss-rtl": "^0.3.0",
     "node-sass": "^5.0.0",
